--- a/src/index.css
+++ b/src/index.css
@@ -2,14 +2,48 @@
 @tailwind components;
 @tailwind utilities;
 
+/* * {
+  border: 1px solid brown;
+  box-sizing: border-box;
+} */
+
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
+  --header-size: 80px;
+  --body-height: calc(100vh - var(--header-size));
+
   color-scheme: dark;
-  color: rgba(255, 255, 255, 0.87);
-  --bg-color: #242424;
+  color: #f7f7f7;
+
+  --base-color-100: #55507d;
+  --base-color-200: #403c5e;
+  --base-color-300: #35324e;
+  --base-color-400: #35324e;
+  --base-color-500: #2b2841;
+  --base-color-600: #1b182e;
+  --base-color-700: #110f1d;
+  --primary-color-400: #f97187;
+  --secondary-color-400: #44a2e3;
+
+  --input-bg: var(--base-color-200);
+
+  --bg-color: var(--base-color-500);
+
+  --base-dark-100: #abb3ba;
+  --base-dark-200: #21292f;
+  --base-dark-300: #171c20;
+
+  --bg-dark: #0c0f11;
+
+  --mute-color-300: #adb5bc;
+  --mute-color-400: #2d353e;
+
+  --success-color-300: #07be61;
+  --success-color-400: #07b75d;
+
   --color-primary-100: #b1b5ff;
   --color-primary-200: #979cff;
   --color-primary-300: #7e84ff;
@@ -77,4 +111,7 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+input {
+  background-color: var(--base-color-200);
 }
