Redesigned login form

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -59,6 +59,9 @@
     --color-success-500: #54ff4b;
     --color-success-600: #3cff31;
 
+    --site-accent: #11eabb;
+    --site-base: #1b182e;
+
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
 
