Updated UI for game components sidebar with a more consitent color theme and font size

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -61,6 +61,7 @@
 
     --site-accent: #11eabb;
     --site-base: #1b182e;
+    --site-base-hover: #403c5e;
 
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
